fix wrong alignment of found-counter on search panel

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -77,7 +77,7 @@ atom-panel {
 
 .find-and-replace .find-meta-container {
   height: 24px;
-  line-height: 24px;
+  line-height: 22px;
   font-size: 1em;
   color: @text-color-subtle;
 }
